src/components/OurMission/OurMission.css
.our-mission {
  padding: 24px 0;
}

.text-block {
  border-radius: 20px;
  padding: 24px 16px;
  background-color: #ecf1ff;
  max-width: 670px;
  width: 50%;
}

.our-mission-title {
  font-family: var(--font-family);
  font-weight: 800;
  font-size: 24px;
  line-height: 120%;
  letter-spacing: -0.02em;
  color: #091a49;
  margin-bottom: 12px;
}
.our-mission-text {
  font-family: var(--font-family);
  font-weight: 500;
  font-size: 16px;
  line-height: 150%;
  color: #091a49;
}
.first {
  margin-bottom: 20px;
}

.photo-block {
  display: none;
}

@media (min-width: 768px) {
  .our-mission {
    display: flex;
    gap: 20px;
    padding: 64px 0 32px;
    align-items: stretch;
  }

  .text-block {
    border-radius: 44px;
    padding: 50px 40px;
    max-height: 528px;
  }

  .our-mission-title {
    margin-bottom: 24px;
    font-size: 32px;
  }
  .our-mission-text {
    font-size: 18px;
  }
  .first {
    margin-bottom: 30px;
  }
  .photo-block {
    display: block;
    border-radius: 44px;
    max-width: 670px;
    width: 50%;
  }
}

@media (min-width: 1300px) {
  .text-block {
    padding: 64px 40px;
  }
  .our-mission-text {
    font-size: 20px;
  }
}

